Table Task {
  id text [pk]
  title text
  richDescription text [note: 'JSON/MD format']
  createdAt datetime
  updatedAt datetime
  beginAt datetime
  endAt datetime
  repeat boolean [default: false]
  priority int [default: 4]
  isCompleted boolean [default: false]
  projectId text [ref: > Project.id]
  isVisible boolean [default: true]
} 

Table Project {
  id text [pk]
  title text
  description text
  createdAt datetime
  isVisible boolean [default: true]
}

Table Tag {
  id text [pk]
  title text
  color text [note: 'Hexadecimal format']
  isVisible boolean [default: true]
}

Table TaggedTask {
  taskId text [ref: - Task.id]
  tagId text [ref: - Tag.id]
}

Table RepeatedTask {
  id text [pk]
  taskId text [ref: - Task.id]
  repeatType text
  interval int
}

Table Reminder {
  id text [pk]
  taskId text [ref: - Task.id]
  time datetime
}
